[package]
name = "nebula_render"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.2.4"
winit = "0.25.0"
wgpu = { version = "0.11.0", features = ["spirv"] }
naga = "0.7.1"

nebula_scene = { path = "../nebula_scene" }
