[package]
name = "nebula_render"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

glam = "0.19.0"

raw-window-handle = "0.3.3"

raw-gl-context = "0.1.2"
gl_bindings = { path = "gl_bindings" }

pollster = "0.2.4"
wgpu = "0.11.0"

nebula_scene = { path = "../nebula_scene" }
